[package]
name = "moonlit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.1"
ringbuffer = "0.12.0"
ropey = "1.5.1"
sdl2 = { version = "0.35.2", features = ["ttf"] }
tree-sitter = "0.20.9"
tree-sitter-highlight = "0.20.1"
tree-sitter-rust = "0.20.3"

[dev-dependencies]
glob = "0.3.1"

[build-dependencies]
cc = "1.0.78"
